<resources>
    <string name="app_name">Surf Android School</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="helper_text">Пароль должен содержать 6 символов</string>
    <string name="error_nothing_found">На этом пока всё :/</string>
    <string name="error_empty_text">Поле не может быть пустым</string>
    <string name="error_text_is_not_phone_number">Введёный текст не является номером телефона</string>
    <string name="error_wrong_data_msg">Вы ввели неверные данные.\nПопробуйте ещё раз</string>
    <string name="error_msg">Произошла ошибка, повторите позже</string>
    <string name="error_no_internet">"Нет подключения к интернету"</string>
    <string name="error_fail_load_msg">Не удалось загрузить ленту.\nОбновите экран или попробуйте позже.</string>
    <string name="success_msg">Успешно</string>
    <string name="popular_memes">Популярные мемы</string>
    <string name="dummy_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="short_dummy_text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti</string>
    <string name="create_your_meme">Создать свой мем</string>
    <string name="create">Создать</string>
    <string name="header">Заголовок</string>
    <string name="text">Текст</string>
    <string name="about_app">О приложении</string>
    <string name="log_out">Выйти</string>
    <string name="profile">Профиль</string>
    <string name="really_want_to_quit">Действительно хотите выйти?</string>
    <string name="cancel">Отмена</string>
    <string name="send_to">Отправить мем…</string>
    <string name="search">Поиск</string>
    <string name="storage_perm_rationale">Без этого разрешения приложение Вы не сможете загружать изображения из галереи.</string>
    <string name="you_can_change_it_in_options">Вы всегда можете изменить параметры доступа в настройках приложения.</string>
    <string name="camera_perm_rationale">Без этого разрешения Вы не сможете использовать камеру в приложении.</string>
    <string name="input_meme_title">Введите название мема</string>
    <string name="load_photo">Пожалуйста, загрузите фото</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="from_gallery">Из галереи</string>
    <string name="take_a_photo">Сделать фото</string>
    <string name="create_meme_success">Ваш мем успешно создан!</string>
</resources>