<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="imageSrc"
            type="String" />

    </data>

    <LinearLayout style="@style/base_root_layout_style">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/base_toolbar_style"
            app:menu="@menu/create_meme_toolbar_menu"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/create_your_meme" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memeHeader_til"
                        style="@style/text_input_layout_field_style"
                        android:hint="@string/header"
                        app:counterMaxLength="140">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/memeHeader_et"
                            style="@style/edit_text_style"
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memeText_til"
                        style="@style/text_input_layout_field_style"
                        android:hint="@string/text"
                        app:counterMaxLength="1000">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/memeText_et"
                            style="@style/edit_text_style"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            loadImage="@{imageSrc}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.coordinatorlayout.widget.CoordinatorLayout>
                </LinearLayout>

            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:theme="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Surf"
                app:shapeAppearanceOverlay="@style/fab_shape_style"
                app:srcCompat="@drawable/ic_gallery"
                tools:ignore="ContentDescription" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>